--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 <body>
   <h1>Calculador de Médias</h1>
   <form id="form">
-    <label for="name">Nome do Aluno:</label>
-    <input type="text" id="name" placeholder="Digite o nome" required>
+    <div id="grades">
+      <label for="name">Nome do Aluno:</label>
+      <input type="text" id="name" placeholder="Digite o nome" required>
 
-    <label for="grade1">Nota 1:</label>
-    <input type="number" id="grade1" placeholder="Digite a 1ª nota" min="0" max="10" required>
+      <label for="grade1">Nota 1:</label>
+      <input type="number" id="grade1" class="grade" placeholder="Digite a 1ª nota" min="0" max="10" required>
 
-    <label for="grade2">Nota 2:</label>
-    <input type="number" id="grade2" placeholder="Digite a 2ª nota" min="0" max="10" required>
+      <label for="grade2">Nota 2:</label>
+      <input type="number" id="grade2" class="grade" placeholder="Digite a 2ª nota" min="0" max="10" required>
+    </div>
 
-    <label for="grade3">Nota 3:</label>
-    <input type="number" id="grade3" placeholder="Digite a 3ª nota" min="0" max="10" required>
-
+    <button type="button" id="addGrade">Adicionar nota</button>
     <button type="button" id="calculate">Calcular Média</button>
     <button type="reset">Limpar</button>
+    
   </form>
 
   <div id="result">Aguardando suas informações...</div>
